# siciarz.net

./: .coveragerc  .gitignore  .travis.yml  Makefile  README.markdown  README.rst  fabfile.py  hosts  manage.py  package-lock.json  package.json  playbook.yml  pyproject.toml  requirements.txt  test_requirements.txt  webpack.config.js
articles/: admin.py  factories.py  feeds.py  filters.py  forms.py  models.py  sitemaps.py  tests.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0001_squashed_0003_auto_20150417_2205.py  0002_auto_20150216_1345.py  0003_auto_20150417_2205.py  0005_auto__add_field_article_language.py  0009_rename_field_pgtags_to_tags.py
articles/south_migrations/: 0001_initial.py  0002_auto__add_field_article_pageviews.py  0003_auto__add_field_article_is_static.py  0004_auto__del_field_article_content_markup_type__del_field_article_summary.py  0006_auto__chg_field_article_status_changed.py  0007_auto__add_field_article_pgtags.py  0008_copy_tags.py  0010_auto__add_field_article_header_image.py
articles/templates/articles/: article_archive_month.html  article_dashboard.html  article_detail.html  article_form.html  article_list.html  article_menu.html  base_articles.html  (+3 more)
articles/templatetags/: article_tags.py
pgallery/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
pgallery/templatetags/: photo_tags.py
photos/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
photos/migrations/: 0001_initial.py  0002_auto__add_field_photo_image.py  0003_auto__add_field_photo_tags__chg_field_photo_image.py  0004_auto__chg_field_photo_tags.py  0005_auto__add_field_gallery_shot_date.py  0006_auto__add_field_photo_exif__chg_field_gallery_status_changed.py
photos/templatetags/: photo_tags.py
siciarz/: .environment  context_processors.py  dashboard.py  settings.py  urls.py  views.py  wsgi.py
siciarz/templates/: 404.html  500.html  base.html  index.html  pjax_base.html
(+34 files in other folders)
