[project]
name = "siciarz-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "crispy-bootstrap3>=2024.1,<2025",
    "dj-pagination>=2.5,<3",
    "django>=4.2,<5",
    "django-braces>=1.17,<2",
    "django-crispy-forms>=2.4,<3",
    "django-debug-toolbar>=6.0,<7",
    "django-extensions>=4.1,<5",
    "django-markitup>=4.1,<5",
    "django-model-utils>=5.0,<6",
    "django-pgallery>=0.12,<1",
    "django-reversion>=6.0,<7",
    "django-rosetta>=0.10,<0.11",
    "gunicorn>=23.0,<24",
    "ipython>=8.37.0,<9",
    "markdown>=3.9,<4",
    "newrelic>=10.16.0,<11",
    "pillow>=11.3,<12",
    "psycopg[binary]>=3.2,<4",
    "pygments>=2.18,<3",
    "requests>=2.32,<3",
    "sentry-sdk>=2.42,<3",
    "sorl-thumbnail>=12.11,<13",
    "unicode-slugify>=0.1.5,<0.2",
]

[dependency-groups]
dev = [
    "coverage>=7.11,<8",
    "factory-boy>=3.3,<4",
    "ruff>=0.14.2",
]
